# StructuredDataProfiling

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  pre-commit.yml  pypi.yml  release.yml  tests.yml
examples/: examples_Adult.ipynb
src/structured_data_profiling/data_tests/: __init__.py  data_tests.py  temporal_test.py
src/structured_data_profiling/expectations/: __init__.py  great_expectations.py
src/structured_data_profiling/preprocessor/: __init__.py  preprocessor.py
src/structured_data_profiling/profiler/: __init__.py  profiler.py
src/structured_data_profiling/utils/: __init__.py  utils.py
structured_data_profiling/: __init__.py
structured_data_profiling/data_slicing/: __init__.py  data_slicing.py
structured_data_profiling/data_tests/: __init__.py  data_tests.py  temporal_test.py
structured_data_profiling/expectations/: __init__.py  great_expectations.py
structured_data_profiling/preprocessor/: preprocessor.py
structured_data_profiling/profiler/: __init__.py  multitable.py  profiler.py
structured_data_profiling/utils/: __init__.py  utils.py
test/: profiler_test.py
tests/: test_profiler.py
tests/resources/datasets/adult/: uci_adult.csv
tests/resources/datasets/lending/: lending.csv
