[tool.poetry]
name = "structured-profiling"
version = "0.3.7"
description = "A Python library to check for data quality and automatically generate data tests. "
authors = ["Clearbox AI <info@clearbox.ai>"]
license = "GPL"
readme = "README.md"
homepage = "https://github.com/Clearbox-AI/StructuredDataProfiling"
repository = "https://github.com/Clearbox-AI/StructuredDataProfiling"
packages = [{ include = "structured_data_profiling" },]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.0"
scikit-learn = "^1.0"
scipy = "~1.7.2"
numpy = "^1.21"
dateparser = "^1"
distfit = "^1.4"
great-expectations = "^0.15.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-lazy-fixture = "^0.6.3"
flake8 = "^5.0.4"
black = "^22.8.0"
flake8-import-order = "^0.18.1"
flake8-black = "^0.3.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
